// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows delay 1`] = `
<table>
  <thead>
    <tr>
      <th />
      <th>
        Timetable
      </th>
      <th>
        Actual
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900C0305"
        >
          Harford Park & Ride
        </a>
      </td>
      <td>
        10:05
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900N1237"
        >
          County Hall Bus Shelter (A)
        </a>
      </td>
      <td>
        10:13
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
        rowSpan={2}
      >
        <a
          href="/stops/2900N12909"
        >
          Norwich Bus Station (F)
        </a>
      </td>
      <td>
        10:18
      </td>
    </tr>
    <tr>
      <td>
        10:20
      </td>
    </tr>
    <tr
      className="minor"
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900N12245"
        >
          Norwich Tombland (CM)
        </a>
      </td>
      <td>
        10:24
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900N12233"
        >
          Norwich Anglia Square (B)
        </a>
      </td>
      <td>
        10:27
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900S32517"
        >
          Sprowston Park and Ride
        </a>
      </td>
      <td>
        10:40
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`shows delay 2`] = `
<table>
  <thead>
    <tr>
      <th />
      <th>
        Timetable
      </th>
      <th>
        Actual
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900C0305"
        >
          Harford Park & Ride
        </a>
      </td>
      <td>
        10:05
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900N1237"
        >
          County Hall Bus Shelter (A)
        </a>
      </td>
      <td>
        10:13
      </td>
      <td>
        10:17:19
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
        rowSpan={2}
      >
        <a
          href="/stops/2900N12909"
        >
          Norwich Bus Station (F)
        </a>
      </td>
      <td>
        10:18
      </td>
    </tr>
    <tr>
      <td>
        10:20
      </td>
    </tr>
    <tr
      className="minor"
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900N12245"
        >
          Norwich Tombland (CM)
        </a>
      </td>
      <td>
        10:24
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900N12233"
        >
          Norwich Anglia Square (B)
        </a>
      </td>
      <td>
        10:27
      </td>
    </tr>
    <tr
      onMouseEnter={[Function]}
    >
      <td
        className="stop-name"
      >
        <a
          href="/stops/2900S32517"
        >
          Sprowston Park and Ride
        </a>
      </td>
      <td>
        10:40
      </td>
    </tr>
  </tbody>
</table>
`;
